# rawdb

./: CMakeLists.txt  README.md  main.cc
data/db_1/table_15/: 0.seg
data/db_1/table_84/: 0.bkt
data/db_2/table_62/: 0.bkt  0.seg
include/backend/: hashfunc.h  hashtable.h  kv_server.h  meta.h  sys_cache.h  tcp_server.h  type_define.h
include/manager/: bitmap.h  disk_manager.h  log.h  log_stream.h
include/protocol/: flatbuf.h  protocol.fbs  protocol_generated.h
include/protocol/flatbuffers/: flatbuffer_builder.h
include/stroage/: bitmap_page.h  bkt_page.h  data_page.h  seg_page.h
src/backend/: hashtable.cc  sys_cache.cc
src/manager/: disk_manager.cc  log_stream.cc
